# SolanaShredProxy

./: .gitignore  Cargo.toml  Makefile  README.md  build.bat  build.ps1  build.rs  config.toml  my_keypair.json
proto/: solana_shred.proto
src/: config.rs  grpc.rs  main.rs  proxy.rs  shred_stream.rs
