[package]
name = "solanashredproxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based proxy for Solana ShredStream, providing ultra-low latency access to leader shreds"
license = "MIT"
repository = "https://github.com/xerion0712/solanashredproxy"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "solanashredproxy"
path = "src/main.rs"
